--- a/html-relative-links/index.html
+++ b/html-relative-links/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="/index.html">Home Page</a></li>
+      <li><a href="index.html">Home Page</a></li>
       <li><a href="about-me/about-me.html">About Me</a></li>
-      <li><a href="./projects/projects.html">Projects</a></li>
-      <li><a href="./contact-us/contact-us.html"> Contact Us </a></li>
+      <li><a href="projects/projects.html">Projects</a></li>
+      <li><a href="contact-us/contact-us.html"> Contact Us </a></li>
     </ul>
     <p>Hello Homepage!</p>
     <img src="./images/javascript.png" alt="Girl holding programming book" />
