--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -43,9 +43,11 @@
         >
       </fieldset>
     </div>
+
     <div>
-      <label for="comments">Sign up for more information?</label>
+      <label>Sign up for more information?</label>
     </div>
+
     <div>
       <label>
         <input type="checkbox" name="interest" value="updates" /> Sign me up!
@@ -55,7 +57,7 @@
     <form action="https://example.com/register" method="post">
       <div><label for="comments">Comments:</label></div>
 
-      <textarea id="comments" name="comments"></textarea>
+      <textarea id="comments" name="comments" cols="80"></textarea>
       <div>
         <button type="submit">Submit</button>
       </div>
