--- a/css-flexbox/align-items.html
+++ b/css-flexbox/align-items.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="pokemon.css" />
     <style>
-      /* your styles here 👇 */
+      #card-deck {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .card-wrapper {
+        flex-basis: calc(100%3);
+      }
     </style>
   </head>
   <body>
